# FastDRLAlgorithms

./: CMakeLists.txt  main.cpp
Catch_tests/: CMakeLists.txt  test_dqn.cpp
ale/: CMakeLists.txt
ale/src/: CMakeLists.txt  ale_interface.hpp
ale/src/emucore/: DefProps.hxx
ale/src/environment/: ale_state.hpp
include/cppdrl/: cppdrl.h
include/cppdrl/distributions/: ActionDistribution.h
include/cppdrl/gym/: base_atari.h  base_wrappers.h  cartpole.h  gym_env.h  ml_pack_wrapper.h
include/cppdrl/gym/spaces/: box.h  discrete.h  multi_discrete.h  space.h
include/cppdrl/gym/wrappers/: atari_preprocessing.h
include/cppdrl/misc/: helper.h  strategy.h
include/cppdrl/models/: cnn_nature.h  mlp.h  nn_base.h
include/cppdrl/policies/: dqn.h  pg.h  policy.h
include/cppdrl/trainers/: dqn_trainer.h  pg_trainer.h  trainer.h
src/: CMakeLists.txt
src/distributions/: ActionDistribution.cpp
src/gym/: CMakeLists.txt  base_atari.cpp  base_wrappers.cpp
src/gym/spaces/: CMakeLists.txt  box.cpp  discrete.cpp  multi_discrete.cpp
src/gym/wrappers/: CMakeLists.txt  atari_preprocessing.cpp
src/misc/: CMakeLists.txt  helper.cpp  strategy.cpp
src/models/: cnn_nature.cpp  mlp.cpp
src/trainers/: pg_trainer.cpp
tests/: CMakeLists.txt  test_dqn.cpp  test_envs.cpp  test_helper.cpp  test_space.cpp
